<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_menu_upcoming"
            android:title="@string/upcoming_movies" />
        <item
            android:id="@+id/nav_nowplaying"
            android:icon="@drawable/ic_menu_nowplay"
            android:title="@string/now_playing"/>
        <item
            android:id="@+id/nav_favorit"
            android:icon="@drawable/ic_favorit"
            android:title="@string/favorit_item"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/search" />

    </group>


</menu>
