<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SettingReminder.SettingActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/setting_notification_reminder"
        android:id="@+id/tv_set_notif"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notif_upcoming"
        android:orientation="horizontal"
        android:layout_below="@id/tv_set_notif">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upcoming_reminder"
            android:layout_gravity="center"
            android:text="@string/turn_on_notif_upcoming"/>

        <Switch
            android:id="@+id/switch_upcoming"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginLeft="90dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notif_daily"
        android:orientation="horizontal"
        android:layout_below="@id/notif_upcoming">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/daily_reminder"
            android:layout_gravity="center"
            android:text="@string/turn_on_notif_daily"/>

        <Switch
            android:id="@+id/switch_daily"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginLeft="150dp"/>

    </LinearLayout>



</RelativeLayout>